--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,13 @@
     "test": "vitest"
   },
   "dependencies": {
-    "fastify": "5.7.4"
+    "dotenv": "^17.3.1",
+    "fastify": "5.7.4",
+    "pg": "^8.18.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@types/pg": "^8.16.0",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
