--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "dotenv": "^17.3.1",
     "fastify": "5.7.4",
     "pg": "^8.18.0"
