--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,6 +8,9 @@ PGPORT=5432
 # Optional: full connection string (overrides individual PG* vars if set)
 # DATABASE_URL=postgres://user:password@localhost:5432/dbname
 
+# Redis connection (optional, for caching)
+REDIS_URL=redis://localhost:6379
+
 # Pool / timeout tuning (optional)
 PG_MAX=10
 PG_IDLE_MS=30000
