--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.3.1",
     "fastify": "5.7.4",
-    "pg": "^8.18.0"
+    "pg": "^8.18.0",
+    "redis": "^5.10.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
