--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@fastify/cors": "^11.2.0",
     "crypto": "^1.0.1",
     "dotenv": "^17.3.1",
     "fastify": "5.7.4",
