--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,17 @@
+# Build stage
+FROM node:24-alpine AS builder
+
+WORKDIR /app
+
+COPY package*.json ./
+
+RUN npm ci
+
+COPY . .
+
+RUN npm run build
+
+# Production stage
 FROM node:24-alpine
 
 WORKDIR /app
